Fixing alignment of content and background pictures

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,18 +1,30 @@
 body {
-    /* background-image: url(../images/) ; */
     font-family: Kumbh Sans;
     font-size: 18px;
     background-color: hsl(185, 75%, 39%);
     color:#000;
-    /* margin: 0; */
     text-align: center;
     line-height: 1.4;
-    
+    margin: 0;
 }
+
+#wrapper {
+    max-width: 1440px;
+    min-width: 960px;
+    height: 1000px;
+    border: 2px solid red;
+    margin: 0 auto;
+}
+
+/* styles for the content layout */
+
 
 #container {
     width: 350px;
     margin: 0 auto;
+    position: relative;
+    top: 25%;
+    bottom: 25%;
 } 
 
 .top {
@@ -24,7 +36,7 @@ body {
     margin: 0;
 }
 
-img { 
+.profile_pic { 
     position: relative;
     top: 100px;
     border: 5px solid white;
@@ -47,6 +59,9 @@ img {
     border-bottom-left-radius: 20px;
     border-bottom-right-radius: 20px;
 }
+
+
+/* styles for text and graphics */
 
 .name {
     position: relative;
@@ -82,4 +97,16 @@ img {
 p {
     display: inline-block;
     margin:30px;
+}
+
+.bg_top {
+    position:absolute;
+    top: -250px;
+    left: -250px;
+}
+
+.bg_bottom {
+    position: absolute;
+    bottom: -250px;
+    right: -250px;
 }
